--- a/index.css
+++ b/index.css
@@ -15,11 +15,18 @@
     padding: 20px;
 }
 
+
 .slideshow{
     height: 86vh;
     background-color: #333;
     position: relative;
     overflow: hidden;
+}
+
+.dog1{
+    height: 50px;
+    font-size: 20px;
+    border-radius: 10px;
 }
 
 .slide{
